--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,9 +37,12 @@ dependencies:
   chess: ^0.8.1
   flutter_svg: ^2.2.0
   http: ^1.2.2
+  stockfish: ^1.8.1
 
 dev_dependencies:
   flutter_test:
+    sdk: flutter
+  integration_test:
     sdk: flutter
 
   # The "flutter_lints" package below contains a set of recommended lints to
